@@ -35,18 +35,4 @@ else {
 	require PerlACE::Process_Unix;
 }
 
-sub Normalize_Executable_Name
-{
-    my $executable = shift;
-
-    my $basename = basename ($executable);
-    my $dirname = dirname ($executable). '/';
-
-    $executable = $dirname.$PerlACE::Process::ExeSubDir.$basename.".EXE";
-
-    $executable =~ s/\//\\/g; # / <- # color coding issue in devenv
-
-    return $executable;
-}
-
 1;
